добавлена вторая страница

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     <header>
         <h1 class="title">Цифровая живопись</h1>
         <ul class="menu">
-            <li><a href = "#">Главная</a></li>
-            <li><a href = "#">История цифрового искусства</a></li>
+            <li><a href = "index.html">Главная</a></li>
+            <li><a href = "history.html">История цифрового искусства</a></li>
             <li><a href = "#">Галлерея работ</a></li>
             <li><a href = "#">Словарь художника</a></li>
             <li><a href = "#">Идеи для вдохновения</a></li>
             <li><a href = "#">Контакты</a></li>
         </ul>
     </header>
+    <!--Основное содержание сайта-->
     <main>
-        <article>
+        <article class="maincontent">
             <h2>Что такое цифровая живопсь?</h2>
             <p><b>Цифровая живопись или Digital painting</b> — это создание цифровых картин с помощью программных имитаций кистей, 
                 красок, карандашей и других инструментов, которыми рисуют обычные художники. </p>
@@ -51,6 +52,7 @@
             </p>
         </article>
     </main>
+    <!--Подвал сайта-->
     <footer>
         <address>
             <button class="button">
@@ -68,8 +70,5 @@
             </button>
         </address>
     </footer>    
-      
-        
-
 </body>
 </html>
