--- a/history.html
+++ b/history.html
@@ -17,7 +17,7 @@
         <ul class="menu">
             <li><a href = "index.html">Главная</a></li>
             <li><a href = "history.html">История цифрового искусства</a></li>
-            <li><a href = "#">Галлерея работ</a></li>
+            <li><a href = "gallery.html">Галерея работ</a></li>
             <li><a href = "#">Словарь художника</a></li>
             <li><a href = "#">Идеи для вдохновения</a></li>
             <li><a href = "#">Контакты</a></li>
