--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
             <li><a href = "index.html">Главная</a></li>
             <li><a href = "history.html">История цифрового искусства</a></li>
             <li><a href = "gallery.html">Галерея работ</a></li>
-            <li><a href = "#">Словарь художника</a></li>
+            <li><a href = "dictionary.html">Словарь художника</a></li>
             <li><a href = "#">Идеи для вдохновения</a></li>
             <li><a href = "#">Контакты</a></li>
         </ul>
@@ -93,6 +93,13 @@
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
+                <span class="dot" onclick="currentSlide(5)"></span>
+                <span class="dot" onclick="currentSlide(6)"></span>
+                <span class="dot" onclick="currentSlide(7)"></span>
+                <span class="dot" onclick="currentSlide(8)"></span>
+                <span class="dot" onclick="currentSlide(9)"></span>
+                <span class="dot" onclick="currentSlide(10)"></span>
             </div>
         </article>
     </main>
