--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href = "index.html">Главная</a></li>
             <li><a href = "history.html">История цифрового искусства</a></li>
             <li><a href = "gallery.html">Галерея работ</a></li>
-            <li><a href = "#">Словарь художника</a></li>
+            <li><a href = "dictionary.html">Словарь художника</a></li>
             <li><a href = "#">Идеи для вдохновения</a></li>
             <li><a href = "#">Контакты</a></li>
         </ul>
