идеи для вдохновения

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
             <li><a href = "history.html">История цифрового искусства</a></li>
             <li><a href = "gallery.html">Галерея работ</a></li>
             <li><a href = "dictionary.html">Словарь художника</a></li>
-            <li><a href = "#">Идеи для вдохновения</a></li>
+            <li><a href = "inspiration.html">Идеи для вдохновения</a></li>
         </ul>
     </header>
     <!--Основное содержание сайта-->
