--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
             <!-- Slideshow container -->
             <div class="slideshow-container">
                 <!-- Full-width images with number -->
-                <div class="mySlides fade">
+                <div class="mySlides fade firstpic" >
                 <div class="numbertext">1 / 10</div>
                 <img src="дерево.jpg" style="width:100%">
                 </div>
