--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Digital painting</title>
     <script src="script.js"></script>
 
     <link rel="stylesheet" href="style.css">
@@ -27,7 +27,7 @@
     <!--Основное содержание сайта-->
     <main>
         <article class="maincontent">
-            <h2>Галеря артов</h2>
+            <h2>Галерея артов</h2>
             <!-- Slideshow container -->
             <div class="slideshow-container">
                 <!-- Full-width images with number -->
